--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.1",
     "expo": "~49.0.8",
+    "expo-file-system": "~15.4.5",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
+    "i": "^0.3.7",
+    "npm": "^10.2.5",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "react-native-table-component": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
